@@ -2,7 +2,7 @@
  * #%L
  * Mule CoAP Connector
  * %%
- * Copyright (C) 2019 - 2022 (teslanet.nl) Rogier Cobben
+ * Copyright (C) 2019 - 2023 (teslanet.nl) Rogier Cobben
  * 
  * Contributors:
  *     (teslanet.nl) Rogier Cobben - initial creation
@@ -43,13 +43,13 @@ public class OptContentFormatOutbound1Test extends AbstractOutboundPropertyTestc
     @Override
     protected Object getPropertyValue()
     {
-        return new Integer( 41 );
+        return Integer.valueOf( 41 );
     }
 
     @Override
     protected Object getExpectedOptionValue()
     {
-        return new Integer( 41 );
+        return Integer.valueOf( 41 );
     }
     
     /* (non-Javadoc)
